--- a/css/main.css
+++ b/css/main.css
@@ -83,8 +83,8 @@ h3 {
 }
 
 .logo {
-  width: 100px;
-  height: 20px;
+  width: 20rem;
+  height: 6rem;
 }
 
 header {
@@ -111,8 +111,8 @@ nav ul {
   padding: 0;
 }
 nav ul a {
-  padding: 10px;
-  font-size: 2rem;
+  padding: 15px;
+  font-size: 3rem;
   font-weight: bold;
 }
 nav ul a:hover {
