--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,8 @@
 @import 'global';
 
 .logo{
-    width:100px;
-    height: 20px;
+    width: 20rem;
+    height: 6rem;
   
 }
 
@@ -32,8 +32,8 @@ nav{
         padding:0;
 
         a{
-            padding: 10px;
-            font-size: 2rem;
+            padding: 15px;
+            font-size: 3rem;
             font-weight:bold;
         }
 
